# Laboratorio-Imagenes-2

./: clean.ipynb  flake.nix  lab2_imagenes.ipynb  lab2_imagenes_pynb.ipynb  pyproject.toml
